# simplesign

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Directory.Build.props  LICENSE  README.md  SECURITY.md  SimpleSign.sln  build_output.txt  coverlet.runsettings  stryker-config.json
.config/: dotnet-tools.json
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  release.yml
bench/: Dockerfile.bench
bench/SimpleSign.Benchmarks/: AlgorithmBenchmarks.cs  BatchBenchmarks.cs  ConcurrencyBenchmarks.cs  DeferredSigningBenchmarks.cs  FeatureBenchmarks.cs  IncrementalSigningBenchmarks.cs  ParsingBenchmarks.cs  PdfHelper.cs  Program.cs  ScaleBenchmarks.cs  SignBenchmarks.cs  SimpleSign.Benchmarks.csproj  StreamBenchmarks.cs  ValidationBenchmarks.cs
cli-tests/: run-all-tests.ps1
docs/: architecture.md  conformance.md  docfx.json  filterConfig.yml  index.md  interoperability.md  performance.md  toc.yml
docs/api/: .gitignore  index.md
docs/articles/: deferred-signing.md  getting-started.md  icp-brasil.md  inspection-validation.md  toc.yml
html/: 02-tabela.html  convert-all.ps1
html-tests/: 01-basico.html  03-listas.html  04-formatacao.html  05-layout-sections.html  06-blockquote-pre.html  07-css-externo.html  08-documento-longo.html  09-mixed-content.html  10-minimal.html  custom.css
interop/: README.md
src/SimpleSign.Agent/src-tauri/: Cargo.toml  tauri.conf.json
src/SimpleSign.Agent/src-tauri/capabilities/: default.json
src/SimpleSign.Agent/src-tauri/src/: main.rs
(+385 files in other folders)
