[package]
name = "simplesign-agent"
version = "1.0.0"
edition = "2021"
description = "SimpleSign Agent - Digital signature approval UI"
authors = ["SimpleSign"]

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
windows = { version = "0.61", features = [
  "Win32_Security_Cryptography",
  "Win32_Foundation",
] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
